--- a/lenddosdk/src/main/res/values/strings.xml
+++ b/lenddosdk/src/main/res/values/strings.xml
@@ -1,42 +1,28 @@
 <resources>
     <!--Lenddo Onboarding SDK Strings-->
     <string name="verify_with_lenddo">Submit and Get Verified </string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_address_view">Set Location</string>
     <string name="next">Next</string>
-    <string name="confirm_location">Confirm</string>
-    <string name="map_instructions">Click on confirm once you have placed the marker on the correct position.</string>
-    <string name="choose_location">Choose Location</string>
-    <string name="required_field">This field is required</string>
-    <string name="enter_your_home_address">Enter your home address</string>
-    <string name="cancel">Cancel</string>
-    <string name="find_on_map">Find on map</string>
-    <string name="mark_your_address">Mark your address</string>
-    <string name="confirm">Confirm</string>
-    <string name="marker_required">Tap on the map to place a marker</string>
-    <string name="verify_your_address" />
-    <string name="address_set">Address confirmed. Click here to change.</string>
-    <string name="type_place_name">Type the name of a place</string>
-    <string name="map_navigation_instructions">Tap on the map to mark the location.\n\nYou may type on the search bar, drag the map or use pinch to zoom to navigate the map.</string>
     <string name="please_wait">Loading ...</string>
-    <string name="notification_error_ssl_cert_invalid">Loading ...</string>
     <string name="psychometrics_title">Psychometric Terms of Use</string>
     <string name="psychometrics_introduction">To ensure that you are the person who is taking the quiz, the app takes random selfie snapshots (not video) during the quiz session.\n\n\nBy Tapping "Continue" you agree to the Terms and Use.</string>
 
     <!--Lenddo Data SDK Strings-->
     <string name="grant_access">Grant Access</string>
     <string name="permission_intro">Please give us access permission to Phone, SMS, Contacts, Photos/Media/Files, Location, and Calendar in order to generate your credit score. Rest assured, your data is safe as we use industry standard for encrypting private data over the internet.\n</string>
-    <string name="learnmore_allcaps">LEARN MORE</string>
     <string name="back_allcaps">BACK</string>
     <string name="cancel_allcaps">CANCEL</string>
     <string name="done_allcaps">DONE</string>
     <string name="submit_allcaps">SUBMIT</string>
     <string name="continue_allcaps">CONTINUE</string>
+    <string name="learn_more">Learn more</string>
+    <string name="dismiss_allcaps">DISMISS</string>
+    <string name="no_thanks_allcaps">NO THANKS</string>
+    <string name="retry_allcaps">RETRY</string>
+    <string name="send_feedback_allcaps">SEND FEEDBACK</string>
 
-    <string name="permission_rationale_partial">To continue using the app, you must have the following permissions:</string>
-    <string name="permission_rationale_complete">To make sure you understand what we actually collect, we\'ve provided a detailed breakdown of the permissions below:</string>
+    <string name="permission_rationale_partial">You have denied the permissions for:</string>
+    <string name="permission_rationale_complete">To continue using the app, you must have the following permissions:</string>
 
     <string name="permission_title_sms">SMS</string>
     <string name="permission_title_phone">Phone</string>
@@ -44,6 +30,7 @@
     <string name="permission_title_contacts">Contacts</string>
     <string name="permission_title_calendar">Calendar</string>
     <string name="permission_title_media">Photos/Media/Files</string>
+    <string name="permission_title_accounts">Accounts</string>
 
     <string name="permission_detail_sms">We use read access to SMS messages to determine a list of people you message most frequently. This helps us build a social graph by making use of the data you provided us.</string>
     <string name="permission_detail_phone">We use the phone state to obtain your Android device ID, which is sent to our servers and used for analytics and reporting purposes. We use read access to your call logs to determine a list of people you contact most frequently. This helps us build a social graph by making use of the data you provided us.</string>
@@ -51,6 +38,7 @@
     <string name="permission_detail_contacts">We use read access to contacts to determine a list of people in your contact list. This helps us build a social graph by making use of the data you provided us. We will not use this information to contact your friends.</string>
     <string name="permission_detail_calendar">Having access to calendar events helps us determine the time of the day you are most busy. People who are busy during the day have different credit behaviour than people who are busy during the night. We use this as a signal for building your credit score.</string>
     <string name="permission_detail_media">We use read access to Photos/Media/Files to extract geo-location information from image and video files. This helps us estimate with a fair level of accuracy on your most visited locations. We use this as a signal for building your credit score.</string>
+    <string name="permission_detail_accounts">We use read access to your Google accounts linked to your device. We use this as a signal for building your credit score.</string>
 
     <string name="feedback_title">Help Us Improve</string>
     <string name="feedback_inquiry">What is your primary reason for not sharing data?</string>
@@ -61,7 +49,7 @@
     <string name="thank_you_title">Thank you</string>
     <string name="thank_you_detail">Your feedback means a great deal and will help us improve the product experience.</string>
 
-    // Validation Message
+    <!--Validation Message-->
     <string name="validation_msg_unsupported_exception">Validation is disabled.</string>
     <string name="validation_msg_mandatory_field">This field is required.</string>
     <string name="validation_msg_validation_disabled">Validation is disabled.</string>
@@ -69,10 +57,16 @@
     <string name="validation_msg_invalid_date_format">Invalid date format.</string>
     <string name="validation_msg_invalid_email_format">Invalid email format.</string>
 
-    // Permission confirmation
+    <!--Permission confirmation-->
     <string name="permission_cancel_dialog_title">Important!</string>
-    <string name="permission_cancel_dialog_message">Are you sure you want to cancel this operation.</string>
+    <string name="permission_cancel_dialog_message">Are you sure you want to cancel this operation?</string>
     <string name="permission_cancel_dialog_positive_key">YES</string>
     <string name="permission_cancel_dialog_negative_key">NO</string>
 
+    <!--Permission dismiss-->
+    <string name="permission_rationale_important_message">You can still allow these permissions by choosing RE-TRY or you may choose DISMISS so you will no longer be asked for permissions.</string>
+    <string name="permission_dismiss_dialog_title">Important!</string>
+    <string name="permission_dismiss_dialog_message">Are you sure you want to continue without granting all permission?</string>
+    <string name="permission_dismiss_dialog_positive_key">YES</string>
+    <string name="permission_dismiss_dialog_negative_key">NO</string>
 </resources>
